Fix include directories in CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,9 +13,10 @@ CACHE PATH "imgui-node-editor include dirs")
 project(imgui-node-editor)
 
 include_directories(BEFORE
-        ${CMAKE_SOURCE_DIR}
+        /
         utilities/
         external/
+        ${ImGUI_SOURCE_DIR}
 )
 
 
@@ -45,4 +46,5 @@ add_library(imgui-node-editor STATIC
 set_property(TARGET imgui-node-editor PROPERTY
 
         MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
+
 
