Update CMakeLists.txt for current source directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 4.1)
 set(CMAKE_CXX_STANDARD 20)
 
-set(INE_MAIN ${CMAKE_SOURCE_DIR})
-set(INE_UTILS ${CMAKE_SOURCE_DIR}/utilities)
-set(INE_EXT ${CMAKE_SOURCE_DIR}/external)
+set(INE_MAIN ${CMAKE_CURRENT_SOURCE_DIR})
+set(INE_UTILS ${CMAKE_CURRENT_SOURCE_DIR}/utilities)
+set(INE_EXT ${CMAKE_CURRENT_SOURCE_DIR}/external)
 set(INE_INC_DIRS
         ${INE_MAIN}
         ${INE_UTILS}
@@ -46,5 +46,6 @@ add_library(imgui-node-editor STATIC
 set_property(TARGET imgui-node-editor PROPERTY
 
         MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
+
 
 
